-----------

- IMPORTANT incompatible changes:

- Fixes:
  - allow for ",milliseconds" in the custom date format of proftpd.log
  - allow for ", referer ..." in apache-* filter for apache error logs.
  - allow for spaces at the beginning of kernel messages. Closes gh-448
  - recidive jail to block all protocols. Closes gh-440. Thanks Ioan Indreias

- New Features:

  Daniel Black
   * filter.d/solid-pop3d -- added thanks to Jacques Lav!gnotte on mailinglist.

- Enhancements:


ver. 0.8.11 (2013/11/13) - loves-unittests-and-tight-DoS-free-filter-regexes
-----------

In light of CVE-2013-2178 that triggered our last release we have put
a significant effort into tightening all of the regexs of our filters
to avoid another similar vulnerability. All filters have been updated
and some to catch more login/authentication failures and to support
for newer application versions. There are test cases for most log
cases of failures now.

As usual, if you have other examples that demonstrate that a filter is
insufficient, or if we have inadvertently introduced a regression,
please provide us with example log lines on the github issue tracker
http://github.com/fail2ban/fail2ban/issues and NOT on a random blog in
some obscure corner of the Internet.

Many thanks to our contributors for this release Daniel Black, Yaroslav
Halchenko, Steven Hiscocks, Mark McKinstry, Andy Fragen, Orion Poplawski,
Alexander Dietrich, JP Espinosa, Jamyn Shanley, Beau Raines, François
Boulogne and others who have helped on IRC and mailing list, logged issues
and bug requests.

- IMPORTANT incompatible changes:
  Filter name changes:
   * 'lighttpd-fastcgi' filter has been renamed to 'suhosin'
   * 'sasl' has been renamed to 'postfix-sasl'
   * 'exim' spam catching failregexes was split out into 'exim-spam'
  These changes will require changing jail.{conf,local} if any of
  those filters were used.

- Fixes:
  Jonathan Lanning
   * filter.d/asterisk -- identified another regex for blocking. Also channel